// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/credExplorer/pagerankTable/TableRow depth parameter changes the color, but not the indentation 1`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 20,
    "marginRight": 5,
  },
  "depth": 0,
  "trStyle": Object {
    "backgroundColor": "rgba(0,143.4375,0,0)",
  },
}
`;

exports[`app/credExplorer/pagerankTable/TableRow depth parameter changes the color, but not the indentation 2`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 20,
    "marginRight": 5,
  },
  "depth": 1,
  "trStyle": Object {
    "backgroundColor": "rgba(0,143.4375,0,0.09999999999999998)",
  },
}
`;

exports[`app/credExplorer/pagerankTable/TableRow depth parameter changes the color, but not the indentation 3`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 20,
    "marginRight": 5,
  },
  "depth": 2,
  "trStyle": Object {
    "backgroundColor": "rgba(0,143.4375,0,0.18999999999999995)",
  },
}
`;

exports[`app/credExplorer/pagerankTable/TableRow indent parameter changes the button indentation 1`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 5,
    "marginRight": 5,
  },
  "indent": 0,
  "trStyle": Object {
    "backgroundColor": "rgba(0,143.4375,0,0.2709999999999999)",
  },
}
`;

exports[`app/credExplorer/pagerankTable/TableRow indent parameter changes the button indentation 2`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 20,
    "marginRight": 5,
  },
  "indent": 1,
  "trStyle": Object {
    "backgroundColor": "rgba(0,143.4375,0,0.2709999999999999)",
  },
}
`;

exports[`app/credExplorer/pagerankTable/TableRow indent parameter changes the button indentation 3`] = `
Object {
  "buttonStyle": Object {
    "marginLeft": 35,
    "marginRight": 5,
  },
  "indent": 2,
  "trStyle": Object {
    "backgroundColor": "rgba(0,143.4375,0,0.2709999999999999)",
  },
}
`;
